--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import 'assets/styles/variables.scss';
 
 * {
   margin: 0;
@@ -7,4 +8,18 @@
   list-style: none;
   text-decoration: none;
   font-family: 'Roboto', sans-serif;
+}
+
+.recharts-legend-item-text{
+  color: #74798C;
+  font-weight: $font-w-medium;
+}
+
+.recharts-surface{
+  margin-right: 10px !important;
+  vertical-align: inherit !important;
+}
+
+.recharts-legend-item.legend-item-1 .recharts-surface{
+  fill: #e60000;
 }
