--- a/src/pages/Dashboard.module.scss
+++ b/src/pages/Dashboard.module.scss
@@ -15,6 +15,7 @@ main {
         }
         &__subtitle{
             font-size: 18px;
+            margin-bottom: map-get($margins, xxlarge);
         }
     }
     .error {
