--- a/src/pages/Dashboard.module.scss
+++ b/src/pages/Dashboard.module.scss
@@ -3,6 +3,7 @@
 main {
     width: calc(100% - 117px);
     margin-left: auto;
+    margin-top: 91px;
     .dashboard {
         width: 100%;
         padding: 3.25rem 6.5rem;
