--- a/src/Layout/SideNav/SideNav.module.scss
+++ b/src/Layout/SideNav/SideNav.module.scss
@@ -3,8 +3,8 @@
 .container{
     background: $color-black;
     width: 117px;
-    height: 100%;
-    position: absolute;
+    height: 100vh;
+    position: fixed;
     top: 0;
     z-index: 0;
     display: flex;
