--- a/src/components/AverageSessionsChart/AverageSessionsChart.module.scss
+++ b/src/components/AverageSessionsChart/AverageSessionsChart.module.scss
@@ -14,7 +14,7 @@
         padding: 2rem;
         color: $color-white;
         opacity: .6;
-        font-weight: $font-w-medium;
+        font-weight: $font-w-normal;
     }
 }
 
