--- a/src/components/AverageSessionsChart/AverageSessionsChart.module.scss
+++ b/src/components/AverageSessionsChart/AverageSessionsChart.module.scss
@@ -6,7 +6,7 @@
     background: $color-primary;
     border-radius: map-get($radius , element);
     padding: 1rem 0 ;
-    width: calc(100% / 3);
+    width: 100%;
     &__title{
         position: absolute;
         z-index: 1;
@@ -18,22 +18,3 @@
     }
 }
 
-.tooltip {
-    background: $color-white;
-    padding: .5rem;
-    height: 50px;
-    width: 70px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    position: relative;
-    z-index: 1;
-    //transform: translateY(40%);
-
-    &__content {
-        font-weight: $font-w-medium;
-        color: black;
-        font-size: 14px;
-    }
-}
