add score chart + responsive 1024

--- a/src/components/ActivityChart/ActivityChart.module.scss
+++ b/src/components/ActivityChart/ActivityChart.module.scss
@@ -3,8 +3,9 @@
 .container{
     background: #FBFBFB;
     border-radius: map-get($radius , element);
-    padding: 2rem;
+    padding: 2rem 0 1rem 1rem;
     box-sizing: border-box;
+    width: 100%;
     &__title{
         font-weight: $font-w-medium;
     }
