--- a/src/components/PerformanceChart/PerformanceChart.module.scss
+++ b/src/components/PerformanceChart/PerformanceChart.module.scss
@@ -2,7 +2,19 @@
 
 .container{
     width: 100%;
+    height: 100%;
     background: $color-secondary;
     border-radius: map-get($radius , element );
     padding: 1rem 0;
+    /* @include screen-sm {
+        order: 1;
+        } */
+    //min-width: 250px;
+    //padding-bottom: 35%;
+    /* @include screen-sm {
+        width: 35%;
+    } */
+    @include screen-sm {
+        grid-column: span 1;
+    }
 }
