--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -8,11 +8,17 @@
     display: flex;
     align-items: center;
     gap: map-get($margins, med);
+    @include screen-sm{
+        padding: 1.5rem;
+    }
     &__text{
         line-height: 1.5;
         &__value{
             font-weight: $font-w-bold;
             font-size: 20px;
+            @include screen-sm{
+                font-size: 16px;
+            }
         }
         &__title{
             color: #74798C;
